infrastructure/base/traefik/traefik.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: platform-traefik
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "8443"
              protocol: TCP
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: bulwark-system
            app: bulwark
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "8443"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring-system
            app.kubernetes.io/name: alloy
      toPorts:
        - ports:
            - port: "9100"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: stalwart-system
            app: stalwart
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: bulwark-system
            app: bulwark
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring-system
            app.kubernetes.io/name: alloy
      toPorts:
        - ports:
            - port: "4318"
              protocol: TCP
